<resources>
    <string name="app_name">CharTracker</string>
    <string name="SignIn">Sign In</string>
    <string name="emailHint">Enter Email</string>
    <string name="passwordHint">Enter Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="stories">Stories</string>
    <string name="add_story">Add Story</string>
    <string name="title">Title:</string>
    <string name="title_hint">Enter title</string>
    <string name="genre">Genre:</string>
    <string name="genre_hint">Enter genre</string>
...
    <string name="allies">Allies:</string>
    <string name="enemies">Enemies:</string>
    <string name="neutral">Neutral:</string>
    <string name="character_details">Character Details</string>
    <string name="edit">Edit</string>
    <string name="edit_character">Edit Character</string>
    <string name="password_confirm">Confirm Password:</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="sign_in_credentials">Sign In With Saved Credentials</string>
    <string name="story_image_desc">Image representing the story</string>
    <string name="overflow_menu">Overflow menu</string>
    <string name="email_verification_instructions">A verification email was sent to the below email. Please verify to continue.</string>
...
    <string name="update_email">Update Email</string>
    <string name="update_email_prompt">Update Email:</string>
    <string name="update_email_hint">Enter New Email</string>
    <string name="current_email_header">Current Email</string>
    <string name="new_email">Input new email</string>
    <string name="email_update_instructions">A verification email will be sent to the new email. Verify that email to complete the update.</string>
    <string name="password_reset">Send password reset email</string>
    <string name="update_password">Update Password</string>
    <string name="update_password_prompt">Update Password:</string>
    <string name="update_password_hint">Enter New Password</string>
    <string name="new_password">New password</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="select_image">Select image</string>
...
    <string name="current_story_image_desc">The current image representing the story</string>
    <string name="selected_story_image_desc">The image selected to replace the current story image</string>
    <string name="remove_image">Remove image</string>
    <string name="remove_currrent_image">Remove current image</string>
    <string name="remove_selected_image">Remove selected image</string>
    <string name="character_image_desc">Image representing the character</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="password_confirm_hint">Confirm New Password</string>
    <string name="scroll_to_top">scroll to the top</string>
    <string name="submit_char">Submit character</string>
    <string name="submit_story">Submit story</string>
    <string name="entity_image">Entity image</string>
    <string name="up_button">Up button</string>
    <string name="invalid_email_password">Invalid email or password!</string>
    <string name="password_reset_email_sent">Password reset email was sent to the email if it matches a user. Please wait a moment for it to arrive.</string>
    <string name="malformed_email_message">Malformed email</string>
    <string name="user_collision_message">User with this email already exists! Please login or use a different email.</string>
    <string name="fail_user_reload_message">Error with account!</string>
    <string name="email_sent">Email sent!</string>
    <string name="not_verified">Email not yet verified. Please try again in a moment.</string>
    <string name="missing_email_password">Missing email and/or password!</string>
    <string name="missing_email">Missing email!</string>
    <string name="missing_password">Missing password!</string>
    <string name="invalid_user">Error with account. Try signing in again.</string>
    <string name="password_update_success">Password successfully updated!</string>
    <string name="reauth_message">This operation requires a recent sign in. Enter password to continue.</string>
    <string name="failed_get_stories">Issue getting stories. Refresh to try again.</string>
    <string name="story_upload_error">Error uploading story!</string>
...
    <string name="unexpected_exception">Unexpected error.</string>
    <string name="signUp_wrong_email">If the email is incorrect:</string>
    <string name="cropping_error">Error cropping the image!</string>
    <string name="retrieval_error">Error retrieving the data!</string>
    <string name="selected_chip">Selected option</string>
    <string name="refresh">Refresh</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account? It is irreversible!</string>
    <string name="confirm_delete_character">Are you sure you want to delete this character? It is irreversible!</string>
    <string name="confirm_delete_story">Are you sure you want to delete this story? It is irreversible!</string>
    <string name="confirm_sign_out">Are you sure you want to sign out of your account?</string>
    <string name="confirm_back">Are you sure you want to go back? All current progress will be lost?</string>
...
