...
                        contentDescription = stringResource(id = R.string.up_button)
                    )
                }
            }
        },
        actions = {actionButtons()},
        modifier = Modifier.semantics { contentDescription = "Top bar" }
    )
}

@Preview
@Composable
fun PreviewCharTrackerDefaultTopBar(){
...
